--- a/assets/styles/components/titles.css
+++ b/assets/styles/components/titles.css
@@ -14,7 +14,7 @@ h2 {
 }
 
 h3 {
-    margin: 5px 6px 7px 8px;
+    margin: 0;
     font-size: 16px;
     font-weight: 700;
     color: var(--Chocolate-1);
